# claude-harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md
.claude-harness/: context_metrics.json
.claude-harness/cache/: index.json
claude_harness/: __init__.py  cli.py  command_generator.py  context_tracker.py  delegation_manager.py  detector.py  discoveries.py  exploration_cache.py  feature_manager.py  file_filter.py  file_read_optimizer.py  initializer.py  lazy_loader.py  orchestration_engine.py  output_compressor.py  output_helper.py  progress_tracker.py
claude_harness/mcp/: __init__.py  playwright_server.py
claude_harness/templates/: __init__.py
docs/: HOOKS.md  INTEGRATION_TEST_REPORT.md  ORCHESTRATION_UX_DESIGN.md  SUBAGENT_DELEGATION_RESEARCH.md  SUBAGENT_INTEGRATION_TEST_REPORT.md  SUBAGENT_TEST_REPORT.md
subagent_test_env/: app.py  requirements.txt
subagent_test_env/.claude/: CLAUDE.md  settings.json
subagent_test_env/.claude-harness/: config.json  context_metrics.json  features.json  progress.md
subagent_test_env/.claude-harness/hooks/: check-git-safety.sh  log-activity.sh  track-progress.sh
subagent_test_env/.claude-harness/session-history/: handoff_20251212_1952.md  session_2025-12-12_1950_UTC.md  session_2025-12-12_1952_UTC.md  session_2025-12-12_2026_UTC.md
subagent_test_env/calculator/: __init__.py  cli.py  history.py  operations.py
subagent_test_env/e2e/: conftest.py
subagent_test_env/e2e/tests/: test_example.py  test_f_002.py  test_f_003.py
subagent_test_env/scripts/: init.ps1  init.sh
subagent_test_env/tests/: __init__.py  test_app.py  test_operations.py
tests/: __init__.py  test_cli.py  test_command_generator.py  test_context_tracker.py  test_delegation_manager.py  test_detector.py  test_discoveries.py  test_exploration_cache.py  test_feature_manager.py  test_file_filter.py  test_file_read_optimizer.py  test_initializer.py  test_lazy_loader.py  test_orchestration_engine.py  test_output_compressor.py  test_output_helper.py  test_progress_tracker.py
